fixed error block position and gaps

--- a/app/components/wallet/WalletReceive.scss
+++ b/app/components/wallet/WalletReceive.scss
@@ -32,14 +32,15 @@
     border-bottom: 1px solid var(--theme-separation-border-color);
     display: flex;
     flex-direction: row;
-    margin: 0 0 18px;
-    padding-bottom: 26px;
+    margin-bottom: 30px;
+    padding-bottom: 30px;
     position: relative;
   
     .qrCode {
-      align-items: flex-start;
+      align-items: flex-end;
       display: flex;
       margin-left: auto;
+      padding-bottom: 21px;
   
       canvas {
         border: 4px solid var(--theme-receive-qr-code-background-color);
@@ -79,7 +80,7 @@
         font-size: 15px;
         letter-spacing: 0.5px;
         line-height: 22px;
-        margin-bottom: 12px;
+        margin-bottom: 40px;
         word-break: break-word;
       }
   
@@ -90,10 +91,12 @@
           @include loading-spinner("../../assets/images/spinner-light.svg");
         }
       }
-  
+
       .error {
+        @include error-message;
         text-align: left;
-      }
+        margin-top: 5px;
+      }      
     }
   }
 
@@ -176,12 +179,6 @@
       }
     }
   }
-
-  .error {
-    @include error-message;
-    margin-bottom: 1rem;
-    text-align: center;
-  }
 }
 
 :global(.YoroiClassic) .component {
@@ -196,17 +193,19 @@
       .usedHash {
         opacity: 0.4;
       }
-    }
 
-    .hashLabel {
-      font-weight: 600;
-      opacity: 0.5;
+      .hashLabel {
+        font-family: var(--font-medium);
+        font-weight: 600;
+        margin-bottom: 10px;
+      }      
     }
   }
 
   .generatedAddresses {
     h2 {
       font-weight: 600;
+      margin-bottom: 10px;
     }
 
     button {
@@ -219,8 +218,6 @@
   padding: 30px;
 
   .qrCodeAndInstructions {
-    margin: 0 0 50px;
-    padding-bottom: 50px;
   
     .instructions {
       .hash {
@@ -244,13 +241,6 @@
         font-size: 14px;
         letter-spacing: 0;
         line-height: 1.57;
-        margin-bottom: 25px;
-      }
-  
-      .error {
-        height: 21px;
-        margin-bottom: 53px;
-        text-align: left;
       }
     }
   }
